# pemd-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: environment.md
pemd_lite/: __init__.py  build_core.py  charge_transfer.py  charges.py  errors.py  forcefield.py  gromacs.py  io.py  logging_utils.py  md.py  pack.py  packmol.py  pipeline.py  polymer.py  polymer_core.py  project.py  relax.py  table.py
pemd_lite/resources/forcefields/itp/: PEO_nonbonded.itp
tests/: test_charges.py  test_pack.py  test_pipeline.py  test_project.py  test_relax.py  test_table.py
workflow/: md.json  md.py  md_smoke.py  poly_diff_100k_all.csv
