[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pemd-lite"
version = "0.1.0"
description = "Workflow-focused polymer build, forcefield generation, packing, and GROMACS pipeline utilities."
readme = "README.md"
requires-python = "==3.7.12"
license = { text = "MIT" }
authors = [
  { name = "PEMD-Lite contributors" }
]
keywords = ["polymer", "molecular-dynamics", "gromacs", "forcefield", "chemistry"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "numpy==1.21.6",
  "pandas==1.3.5",
  "scipy==1.7.3",
  "rdkit==2022.09.1",
  "MDAnalysis==2.1.0",
  "ParmEd==3.4.3",
  "networkx==2.7",
  "foyer==0.11.2",
  "typing_extensions==4.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pemd_lite", "pemd_lite.*"]

[tool.setuptools.package-data]
pemd_lite = [
  "resources/forcefields/itp/*.itp",
  "resources/forcefields/pdb/*.pdb",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
